fix container margin on smaller viewports

--- a/src/components/Container.module.css
+++ b/src/components/Container.module.css
@@ -11,5 +11,6 @@
   .container {
     flex-wrap: nowrap;
     flex-direction: column;
+    margin: 20px auto;
   }
 }
